<resources>
    <string name="app_name">MarksApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="labolatoria">Labolatoria</string>
    <string name="oceny_student_w">Oceny studentów</string>
    <string name="data">Data</string>
    <string name="punkty">Punkty</string>
    <string name="index">Index</string>
    <string name="ocena">Ocena</string>
    <string name="obecno">Obecność</string>
    <string name="nieobecno">Nieobecność</string>
    <string name="punkty_za_wyk_ad">Punkty za wykład</string>
    <string name="punkty_za_zadanie_domowe">Punkty za zadanie domowe</string>
    <string name="wszystkie">Wszystkie</string>
</resources>
